css/global.css
/* ... */
.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
    color: initial;
}
.DropdownActionsLabel {display:inline-block;}

/* Messaging */
span.Pill {
    border-radius: 4px;
    padding: 2px 5px 2px 5px;
    cursor: pointer;
}
div#MessageContainer {
    width: 200px;
    z-index: 90;
}
div.MessageBox {
    border-radius: 4px;
    padding: 5px;
    text-align: left;
    margin-bottom: 5px;
    min-height: 50px;
    cursor: pointer;
    line-height: 120%;
}
div.MessageBox a {
    margin-top: 1vh;
    max-width: 90% !important;
    word-wrap: break-word;
    text-decoration: underline !important;
}

.FeaturedSimpleLinks {
    display: table;
    width:100%;
}

.FeaturedSimpleTile {
    position: relative;
    margin-top: 10px;
    height: 150px;
    border-radius:5px;
    overflow: hidden;
}

.FeaturedSimpleTileImage .HomePanelIN {
    background: none;  
}

.FeaturedSimpleLinks .FeaturedSimpleTileContents {
    width:100%;
    height:100%;
    display: table;
}

.FeaturedSimpleTileText {
    vertical-align: middle;
    display: table-cell;
}
   
.FeaturedSimpleLink{
    position: absolute;
    padding: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}
 
a.FeaturedSimpleLink:hover, a.FeaturedSimpleLink:active  { 
    text-decoration:none;
}

.FeaturedCallToActionTile .FeaturedSimpleTileContents h2 {
    text-align: center;
}
.FeaturedCallToActionTile .FeaturedSimpleTileContents h2 span{
    font-size: 2em;
}

.FeaturedSimpleTile .FeaturedSimpleTileContents h2{
    background: transparent;
    max-width: 220px;    
    white-space: normal;
}

.FeaturedSimpleTileActions {
    position: absolute;
    color: #fff;
    left: 0;
    bottom: 0;
    width: 100%;
    background: #000;
    height: 20px;
    text-align: right;
    z-index:2;
}

.FeaturedSimpleTileActions .tool {
    margin-left: 8px;
    vertical-align: middle;
    display: inline-block;
    padding-right: 5px;    
}

.FeaturedSimpleTileImage img.TileGroupImageBase { position: absolute; top: 10px; height: 100%; box-shadow: 0 0 25px #000; }

.FeaturedSimpleTile.FullWidth { height: 40px; }
.FeaturedSimpleTile.FullWidth .FeaturedSimpleLink { width: 85%; }
.FeaturedSimpleTile.FullWidth .FeaturedSimpleTileContents h2 { background-color: unset; }
.FeaturedSimpleTile.FullWidth .FeaturedSimpleTileContents h2 span[data-tag="resources_count"] { padding: 3px 5px; border-radius: 4px; font-size: 0.85em; background-color: #646B60; }
.FeaturedSimpleTile.FullWidth .ListTools .ActionsContainer select { margin: 5px 5px; }
.FeaturedCallToActionTile.FullWidth .FeaturedSimpleTileContents { background-color: rgba(0,0,0,0.4); }
.FeaturedCallToActionTile.FullWidth .FeaturedSimpleTileContents h2 span { font-size: larger; }

.MessageUnread {
    font-weight: bold;
}
#toggleHiddenCollectionsLink{
    margin-left:10px;
}

#user_messages table tr {
    vertical-align:top;
    
}

#CentralSpaceLogin {
    position: relative;
}

#login_box {
    padding: 20px 25px 5px 25px;
    border-radius: 15px;
    box-shadow: 0 1px 10px 1px rgba(0,0,0,0.25);
}

#login_box h1 {
    font-size: 18px;
    padding-bottom: 0;
}

#login_box #language {
    width: 255px;
}

#login_box #user_local_tz {
    width: 273px;
}

#login_box .Question input[type=text],
#login_box .Question input[type=password],
#login_box textarea {
    background-color: #9a9a9ad9;
    color: white;
}

#login_box .Question label {
    width: 515px;
}

#login_box .Question.HalfWidth {
    width: 272px;
    display: inline-block;
}
#login_box .Question.HalfWidth label {
    width: 250px;
}
#login_box .QuestionSubmit {
    float: right;
    margin-top: 5px;
}
#login_box .QuestionSubmit label {
    display: none;
}

#login_box .QuestionSubmit input {
    min-height: 32px;
    padding: 6px 18px;
}
#login_box .Question.KeepLoggedIn {
    display: inline-block;
    margin: 12px 0 20px 0;
}

#login_box .KeepLoggedIn label {
    float: unset;
}
#login_box #remember {
    float: left;
    margin-right: 10px;
    margin-left: 0;
}
p.LoginLinks {
    line-height: 28px;
    padding-bottom: 5px;
}
#login_opt_in {
    float: left;
    margin: 3px 10px 3px 0;
}
#modal #login_box {
    width: 600px;
    box-sizing: border-box;
    border-radius: 0;
}

#login_box .FormError {
    color: white;
    background-color: #ff000030;
    margin: 0;
    padding: 5px;
    border-radius: 6px;
    border: 2px solid red;
}
#LoginHeader {
    border-radius: 6px;
}
/* Manage External Shares */
.FormFilter {
    width: 700px;
}

.FilterItemContainer {
    margin-top: 10px;
}

.FilterItemContainer:nth-child(2) {
    margin-top: 0;
}

.FilterItemContainer > label {
    width: 300px;
    float: left;
    margin-top: 0.4em;
}

#filter_date_from, #filter_date_to {
    width: 100px;
}

form.FormFilter button {
    display: block;
    margin-top: 20px;
    float: right;
}

form.FormFilter button.ClearButton {
    margin-right: 10px;
}

.HiddenTile {
    border: 1px solid red !important;
    margin: -2px ;
}

.CollectBack .CollectionResourceRemove, .CollectBack .CollectionResourceRemove:hover {text-decoration:none;}

.JumpPanel input
    {
    width:35px;
    }

/* Collapsible sections - using FontAwesome */
.collapsed:before {content: "\f054";    font: normal normal normal 14px "Font Awesome 5 Free";font-weight: 600;padding-right:12px; display: inline-block; width:0.6em;}
.expanded:before {content: "\f078";    font: normal normal normal 14px "Font Awesome 5 Free";font-weight: 600;padding-right:12px; display: inline-block; width:0.6em;/*! margin-right: 6px; */}

/* Subtext */
.sub {font-size:0.8em;}

.Highlight {background:#FFFF00;}

/* Pagers (Search, Collections, Shares etc.) */
.TeamExternalSharesPager {
    width: 240px;
    float: right;
    margin-top: -50px;
    margin-right: 10px;
}

#AdminManageMetadataFieldOptions > .TopInpageNavRight,
#AdminManageMetadataFieldOptions > .TopInpageNavRight > .TopInpageNavRight {
    position: inherit;
    padding-left: 250px;
    margin-bottom: 10px;
}
/* ... */

